<resources>
    <!-- ICON CONTENT DESCRIPTION -->
    <string name="icon_food">Food icon</string>
    <string name="icon_pizza">Pizza icon</string>
    <string name="icon_snack">Snack icon</string>
    <string name="icon_coffee">Coffee icon</string>
    <string name="icon_tea">Tea icon</string>
    <string name="icon_football">Football icon</string>
    <string name="icon_basketball">Basketball icon</string>
    <string name="icon_volleyball">Volleyball icon</string>
    <string name="icon_tennis">Tennis icon</string>
    <string name="icon_golf">Golf icon</string>
    <string name="icon_gym">Gym icon</string>
    <string name="icon_running">Running icon</string>
    <string name="icon_cycling">Cycling icon</string>
    <string name="icon_hiking">Hiking icon</string>
    <string name="icon_swimming">Swimming icon</string>
    <string name="icon_music">Music icon</string>
    <string name="icon_painting">Painting icon</string>
    <string name="icon_gaming">Gaming icon</string>
    <string name="icon_laptop">Laptop icon</string>
    <string name="icon_design">Design icon</string>
    <string name="icon_study">Study icon</string>
    <string name="icon_work">Work icon</string>
    <string name="icon_sleep">Sleeping icon</string>
    <string name="icon_shower">Shower icon</string>
    <string name="icon_toothbrush">Toothbrush icon</string>

    <!-- states   -->
    <string name="icon_routines_complete">Complete routines icon</string>
    <string name="icon_empty_list">Empty list icon</string>

    <!--  MOTIVATION  -->
    <string name="motivation_one">Don’t stop when you’re tired. Stop when you’re done.</string>
    <string name="motivation_two">Little things make big days.</string>
    <string name="motivation_three">The secret of getting ahead is getting started.</string>

    <!--  TEXT  -->
    <string name="app_name" translatable="false">Routines</string>
    <string name="list">List</string>
    <string name="empty">Empty</string>
    <string name="empty_description">You have no routines.\nTry to create your first one!</string>
    <string name="routine">Routine</string>
    <string name="sad_face">Sad face</string>
    <string name="awesome">Awesome</string>
    <string name="logo">Logo</string>
    <string name="complete_description">All your routines were completed today!</string>
    <string name="resume">Resume</string>
    <string name="title">Title</string>
    <string name="icon">Icon</string>
    <string name="create">Create</string>
    <string name="midday_time" translatable="false">12:00</string>
    <string name="feature_not_supported">This feature is not supported yet!</string>
    <string name="reminder">Reminder</string>
    <string name="noon">Noon</string>
    <string name="text_too_short">Text is too short</string>
    <string name="lunch">Lunch</string>
    <string name="error_while_creating_routine">Error occurred while creating new routine!</string>
    <string name="title_icon">Title icon</string>
    <string name="lunch_time" translatable="false">12:00</string>
    <string name="routine_icon">Routine icon</string>
    <string name="icon_alarm">Alarm icon</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="routine_deleted">Routine was deleted!</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="routine_restore_error">Routine can\'t be restored!</string>
    <string name="restore_routine">Restore routine</string>
    <string name="notification_channel_reminders_name">Reminders</string>
    <string name="notification_channel_reminders_description">Notifies you when routine is about to start.</string>
    <string name="add">Add</string>
    <string name="afternoon">Afternoon</string>
    <string name="icon_picked">Picked icon</string>
    <string name="account_picture">Account picture</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="registration_name">How should I call you?</string>
    <string name="registration_avatar">How do you look like?</string>
    <string name="user_already_exists">User name is already taken</string>
    <string name="accounts">Accounts</string>
    <string name="empty_accounts_description">No account found!</string>
    <string name="registration">Registration</string>
    <string name="account">Account</string>
    <string name="routines">Routines</string>
    <string name="sign_out">Sign out</string>
    <string name="delete">Delete</string>
    <string name="permanently_delete">Permanently delete</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="icon_empty_trash">Empty Trash Bin</string>
    <string name="empty_trash_description">Your trash bin is empty!</string>
</resources>