<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EmptyFragment">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        style="@style/FullscreenTitle"
        app:layout_constraintBottom_toTopOf="@+id/sad_face_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/sad_face_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_big"
        android:contentDescription="@string/sad_face"
        android:src="@drawable/ic_sad_face"
        style="@style/FullscreenImage"
        app:layout_constraintBottom_toTopOf="@+id/description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/create_button"
        app:layout_constraintStart_toStartOf="@+id/create_button"
        app:layout_constraintTop_toBottomOf="@+id/sad_face_image"
        style="@style/FullscreenDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="@dimen/max_button_size"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        android:layout_marginTop="@dimen/space_small"
        style="@style/Button.Brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>