<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="dev.simecek.routines.utils.drawable.DrawableUtils" />
        <variable
            name="viewModel"
            type="dev.simecek.routines.viewModel.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.RegistrationFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />

        <dev.simecek.routines.view.TitleView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/name_description"
            app:layout_constraintTop_toTopOf="@+id/guideline_top"
            app:text="@string/welcome"
            app:color="?attr/colorOnSurface"/>
        <TextView
            android:id="@+id/name_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_name"
            android:layout_marginTop="@dimen/space_big"
            app:layout_constraintStart_toStartOf="@+id/name_input"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_description"
            app:layout_constraintWidth_percent="@dimen/max_input_width_percent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/avatar_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:text="@string/registration_avatar"
            app:layout_constraintStart_toStartOf="@+id/name_input"
            app:layout_constraintTop_toBottomOf="@+id/name_input" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/registration_avatar_size"
            android:layout_height="@dimen/registration_avatar_size"
            android:layout_marginTop="@dimen/space_small"
            android:background="@{DrawableUtils.getAvatarDrawable(context, viewModel.avatar)}"
            android:contentDescription="@string/avatar"
            tools:background="@drawable/avatar_1"
            app:layout_constraintStart_toStartOf="@+id/avatar_description"
            app:layout_constraintTop_toBottomOf="@+id/avatar_description" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_medium"
            android:layout_marginBottom="@dimen/space_medium"
            android:contentDescription="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
