<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="dev.simecek.routines.viewModel.CreateRoutineViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CreateRoutineFragment">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/title_text_layout"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextHeader" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_layout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/space_small"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title"
            app:layout_constraintWidth_percent="@dimen/max_input_width_percent"
            app:startIconDrawable="@drawable/ic_title"
            app:endIconMode="custom"
            app:endIconDrawable="@{viewModel.isTitleLongEnough(viewModel.title) ? null : @drawable/ic_error}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_text"
                android:text="@={viewModel.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_too_short"
            android:layout_marginTop="@dimen/space_small"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:visibility="@{viewModel.isTitleLongEnough(viewModel.title)? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/title_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/title_text_layout"
            />

        <TextView
            android:id="@+id/header_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon"
            style="@style/TextHeader"
            app:layout_constraintStart_toStartOf="@+id/header_title"
            app:layout_constraintTop_toBottomOf="@+id/title_text_error" />

        <dev.simecek.routines.view.IconPickerView
            android:id="@+id/icon_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            app:selectedIcon="@={viewModel.icon}"
            app:layout_constraintEnd_toEndOf="@+id/title_text_layout"
            app:layout_constraintStart_toStartOf="@+id/title_text_layout"
            app:layout_constraintTop_toBottomOf="@+id/header_icon" />

        <TextView
            android:id="@+id/header_reminder"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            app:layout_constraintStart_toStartOf="@+id/header_icon"
            app:layout_constraintTop_toBottomOf="@+id/icon_picker" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_reminder"
            app:layout_constraintWidth_percent="@dimen/max_input_width_percent"
            app:startIconDrawable="@drawable/ic_reminder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_picker_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:cursorVisible="false"
                android:text="@{viewModel.reminder.toString()}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart"
            android:layout_marginTop="@dimen/space_big"
            android:enabled="@{viewModel.isTitleLongEnough(viewModel.title)}"
            app:layout_constraintEnd_toEndOf="@+id/time_picker"
            app:layout_constraintStart_toStartOf="@+id/time_picker"
            app:layout_constraintTop_toBottomOf="@+id/time_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>